# logit

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/: analyze.rs  cli.rs  error.rs  filter.rs  lang.rs  main.rs  scanner.rs
src/git/: author.rs  diff.rs  mod.rs  repo.rs
src/github/: api.rs  cache.rs  mod.rs  svg.rs
src/output/: column.rs  json.rs  mod.rs  table.rs  tui.rs
src/stats/: aggregator.rs  mod.rs  models.rs
tests/: fixture_test.rs
tests/common/: mod.rs
