[package]
name = "logit"
version = "0.1.0"
edition = "2024"
description = "logit — lines of git"

[dependencies]
git2 = "0.19"
tokei = "12.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rayon = "1"
anyhow = "1"
thiserror = "2"
colored = "3"

[dependencies.ratatui]
version = "0.29"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "json"]
optional = true

[dependencies.tera]
version = "1"
optional = true

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
github = ["dep:reqwest", "dep:tera"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
